--- a/EnsemblFS/EnsemblFS.csproj
+++ b/EnsemblFS/EnsemblFS.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ensembl-net\Ensembl\Ensembl.csproj" />
+    <ProjectReference Include="..\..\FuseSharp\src\FuseSharp\FuseSharp\FuseSharp.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
